@@ -1,3 +1,25 @@
+          *** IMPORTANT *** 
+
+This is a CVS snapshot of GNet.
+This snapshot was compiled with development GNet code.
+The pack/unpack funtions are the only 1.2 code that has been 
+tested an exported.
+
+This requires GLib 1.3 snapshot 20010301.
+[http://www.gimp.org/win32/glib-dev-20010301.zip]
+That glib snapshot has two confirmed problems:
+1) glib's socket iochannels are not freed properly,
+which causes Winsock to run out of buffer space over time.
+2) glib's window handle callback code always calls back,
+GNet in this release ignores those extra callbacks.
+
+Later versions of Glib 1.3.X may work too.
+
+Join or checkout the mailing lists at
+http://www.gnetlibrary.org/ for the most
+up-to-date information.
+
+          *****************
 
 GNet README for Win32
 ---------------------
@@ -23,11 +45,17 @@ interfaces.
 MINGW/GCC & CYGWIN Notes
 ------------------------
 
-Compiling GNet on windows with gcc/mingw (with or without cygwin) is 
-not supported. This is because GNet requires winsock2. 
+Compiling GNet on windows with gcc/mingw is supported. You first need to patch 
+w32api up to version 0.5 or later. [see http://mingw.sourceforge.net/] 
+A makefile to build GNet is included in the zip.
 
-You can use/link GNet with gcc/mingw. Follow the latest instructions 
-that came with gcc/mingw on how to build libgnet-X.Y.a from gnet-X.Y.dll.
+You can use/link GNet with gcc/mingw. A ".a" is included in the zip.
+A makefile is provided to compile the example programs.
+
+When compiling your program use the "-lws2_32 switch"
+example:
+gcc -g -Wall -mno-cygwin -mpentium -fnative-struct -I../glib -I. -I../gnet 
+-L../glib -L../gnet hostinfo.c -o hostinfo -lgnet-1.0 -lglib-1.3 -lws2_32
 
 MSVC 6.0 Notes
 --------------
